# CDescomplicado

./: .gitignore  CMakeLists.txt  input.c
basic/: atribuicao.c  condicionais.c  constantes.c  incremento.c  loops.c  main.c  operadores_aritmeticos.c  output.c  switch.c  variaveis.c
