cmake_minimum_required(VERSION 3.20)
project(CDescomplicado C)

set(CMAKE_C_STANDARD 99)

add_executable(CDescomplicado basic/main.c)
add_executable(Variaveis basic/variaveis.c)
add_executable(Output basic/output.c)
add_executable(Input basic/input.c)
add_executable(Atribuicao basic/atribuicao.c)
add_executable(Constantes basic/constantes.c)
add_executable(OperadoresAritmeticos basic/operadores_aritmeticos.c)
add_executable(Incremento basic/incremento.c)
add_executable(Condicionais basic/condicionais.c)
add_executable(Switch basic/switch.c)
add_executable(Loops basic/loops.c)